// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertStatus should create a default error alert with message 1`] = `
<div>
  <div
    class="sc-bcXHqe kTeOcJ"
  >
    <span
      class="sc-gswNZR gHqGzw"
    >
      ×
    </span>
    Error Message
  </div>
</div>
`;

exports[`AlertStatus should create an alert error 1`] = `
<div>
  <div
    class="sc-bcXHqe kTeOcJ"
  >
    <span
      class="sc-gswNZR gHqGzw"
    >
      ×
    </span>
    Error Message
  </div>
</div>
`;

exports[`AlertStatus should create an alert info 1`] = `
<div>
  <div
    class="sc-bcXHqe fbdirU"
  >
    <span
      class="sc-gswNZR gHqGzw"
    >
      ×
    </span>
    Info messsage
  </div>
</div>
`;

exports[`AlertStatus should create an alert success 1`] = `
<div>
  <div
    class="sc-bcXHqe eaNCao"
  >
    <span
      class="sc-gswNZR gHqGzw"
    >
      ×
    </span>
    Success messsage
  </div>
</div>
`;

exports[`AlertStatus should create an alert warning 1`] = `
<div>
  <div
    class="sc-bcXHqe gOgURE"
  >
    <span
      class="sc-gswNZR gHqGzw"
    >
      ×
    </span>
    Warning messsage
  </div>
</div>
`;

exports[`AlertStatus should create no alert when no message associated 1`] = `<div />`;
